display bug on windows & tax bug fixed and some refactor