@@ -8,6 +8,7 @@ import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
+import java.io.File;
 
 import entity.Cell;
 import entity.Game;
@@ -15,7 +16,6 @@ import entity.MapGUI;
 import entity.Player;
 
 import java.net.MalformedURLException;
-import java.net.URL;
 import java.util.Arrays;
 import java.util.List;
 
@@ -317,9 +317,10 @@ public class GameFrame {
 			bgmMenuItem = new JMenuItem(m);
 			bgmMenuItem.addActionListener(new ActionListener() {
 				public void actionPerformed(ActionEvent e) {
+					AudioClip audioClip;
+					File f = new File("./bgm/" + m + ".mid");
 					try {
-						AudioClip audioClip;
-						audioClip = Applet.newAudioClip(new URL("file:///./music/" + m + ".mid"));
+						audioClip = Applet.newAudioClip(f.toURI().toURL());
 						audioClip.play();
 					} catch (MalformedURLException e1) {
 						e1.printStackTrace();
